# ai-digest

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  main.py  pyproject.toml
src/: graph.py  state.py
src/agents/: email_crafter.py  researcher.py  summarizer.py
src/tools/: scrape.py  search.py
tests/: test_email.py  test_research.py  test_summarizer.py
